# Jobs2BigQuery

./: .gcloudignore  .gitignore  Makefile  README.md  main.py  pyproject.toml
.circleci/: config.yml
deploy/: bigquery_example_schema.json  pubsub_payload.json
jobs2bigquery/: __init__.py  bigquery.py  http.py  joblistings.py  utils.py
jobs2bigquery/custom_jobsites/: google.py  intel.py
misc/: Jobs2BigQuery Diagram.drawio  companies-list.json
